--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -85,6 +85,5 @@ button {
 .container-fluid {
   width: 100%;
   max-width: 1890px;
-  // padding: 0 15px;
-  // margin: 0 auto;
+  margin: 0 auto;
 }
