--- a/scss/style.scss
+++ b/scss/style.scss
@@ -658,8 +658,12 @@
     padding: 50px;
     position: relative;
     z-index: 20;
-    width: 1280px;
-    height: 880px;
+    width: 1000px;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     img {
       width: 100%;
       height: 100%;
@@ -675,8 +679,8 @@
     .icon {
       width: 50px;
       height: 50px;
-      fill: rgba(113, 179, 198,0.7);
-      stroke: $default-color;
+      fill: #fff;
+      stroke: #677F8B;
     }
   }
 }
@@ -699,8 +703,8 @@
 .popup__swiper {
   width: 100%;
   height: 100%;
-  max-width: 700px;
-  height: 600px;
+  max-width: 550px;
+  height: 500px;
   margin: 50px auto 0;
   overflow-x: hidden;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
@@ -710,7 +714,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-   
     img {
       display: block;
       width: 60%;
@@ -726,25 +729,38 @@
     }
   }
   &-button {
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    border: 2px solid $default-color;
-    background-color: rgba(113, 179, 198, 0.7);;
-    top: 50%;
+    border: 2px solid #677F8B;
+    background-color: transparent;;
+    top: 55%;
     cursor: pointer;
     svg.icon {
       fill: #fff;
-      stroke: $default-color;
-      width: 35px;
-      height: 35px;
+      stroke: #677F8B;
+      width: 30px;
+      height: 30px;
     }
     &--next {
-      right: 160px;
+      right: 130px;
     }
     &--prev {
-      left: 160px
+      left: 130px
     }
+  }
+  .swiper-pagination-bullet {
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #677F8B;
+    display: none;
+    border-radius: 50%;
+    background: transparent;
+    opacity: 1;
+  }
+  .swiper-pagination-bullet-active {
+    background: #677F8B;
   }
 }
 
