--- a/scss/style.scss
+++ b/scss/style.scss
@@ -644,6 +644,8 @@
   z-index: 40;
   top: 50%;
   left: 50%;
+  width: 100%;
+  height: 100%;
   transform: translate(-50%, -50%) scale(0);
   transition: all 0.6s linear;
   &__body {
@@ -658,8 +660,10 @@
     padding: 50px;
     position: relative;
     z-index: 20;
-    width: 1000px;
-    height: 800px;
+    width: 100%;
+    min-height: 850px;
+    max-width: 1200px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -701,6 +705,7 @@
   }
 }
 .popup__swiper {
+  position: inherit;
   width: 100%;
   height: 100%;
   max-width: 550px;
@@ -734,7 +739,7 @@
     border-radius: 50%;
     border: 2px solid #677F8B;
     background-color: transparent;;
-    top: 55%;
+    top: 50%;
     cursor: pointer;
     svg.icon {
       fill: #fff;
@@ -743,10 +748,10 @@
       height: 30px;
     }
     &--next {
-      right: 130px;
+      right: 0;
     }
     &--prev {
-      left: 130px
+      left: 0;
     }
   }
   .swiper-pagination-bullet {
