--- a/scss/style.scss
+++ b/scss/style.scss
@@ -642,39 +642,23 @@
 .popup {
   position: fixed;
   z-index: 40;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 100%;
-  transform: translate(-50%, -50%) scale(0);
+  height: 100vh;
+  transform: scale(0);
   transition: all 0.6s linear;
-  &__body {
-    min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 10px;
-  }
   &__content {
     background-color: $bg-col;
     padding: 50px;
     position: relative;
     z-index: 20;
-    width: 100%;
-    min-height: 850px;
-    max-width: 1200px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    img {
-      width: 100%;
-      height: 100%;
-    }
   }
   &--active {
-    transform: translate(-50%, -50%) scale(1);
+    transform: scale(1);
   }
   &__close {
     position: absolute;
@@ -707,9 +691,8 @@
 .popup__swiper {
   position: inherit;
   width: 100%;
-  height: 100%;
-  max-width: 550px;
-  height: 500px;
+  height: 350px;
+  max-width: 450px;
   margin: 50px auto 0;
   overflow-x: hidden;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
@@ -719,17 +702,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: auto;
     img {
       display: block;
-      width: 60%;
-      height: 60%;
-      object-fit: contain;     
+      object-fit: contain;   
+      box-sizing: border-box;  
       cursor: pointer;  
       transition: all 0.7s;
+      width: 50%;
+      height: 50%;
     }
     &:hover {
       img {
-        transform: scale(1.3);
+        transform: scale(1.1);
       }
     }
   }
