--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -667,7 +667,7 @@
     .icon {
       width: 50px;
       height: 50px;
-      fill: #fff;
+      fill: transparent;
       stroke: #677F8B;
     }
   }
